# phd-thesis

./: .gitignore  Makefile  README.md  abstract_standalone.tex  bibliography.tex  matplotlibrc  mimosis.cls  praegung.tex  pyproject.toml  pythonhighlight.sty  ruecken.tex  thesis.bib  thesis.tex  titlepage.tex
configs/aict/: iact_config.yaml
configs/preprocessing/: config.yaml
configs/pymc/: data_conf.yaml  data_conf_unfold.yaml
contents/: abstract.tex  acknowledgments.tex  appendix.tex  conclusion_1.tex  conclusion_2.tex  crab_sed.tex  examples.tex  introduction_1.tex  introduction_2.tex  ml.tex  observation.tex  reco.tex  repro.tex  rta.tex  sensitivity.tex  spectral.tex  theory.tex  titlepage_twopaged.tex
cta_analysis/: Makefile
data/: README.md
figures/: iact_sketch.py  make_graph.gephi
plots/: analytical_solution_validity.py  array_layout.py  boundary.py  cleaning_info.py  corner_plots.py  cosmic_rays.py  data_utils.py  dataset_info.py  dl2_info.py  electron_spectrum.py  erf.py  error_propagation.py  event_selection.py  fact_irf.py  fermi_plot.py  funk.py  hess_gps.py  iact_counts.py  iact_overview.py  latex_utils.py  ml_data_info.py  model_variations.py  naima_parameter.py  naima_sed_plot.py  plot_utils.py  preprocessing.py  pymc_fit_results.py  pymc_unfold_correlations.py  pymc_unfold_results.py  pymc_utils.py  rta.py  sed_fit_he.py  spectrum_plot.py  wobble_mode.py
plots/data/: MAGIC_2015_Crab_Nebula.fits  fermi_crab_flux.csv  hess_crab_flux.csv  lapalma_coords.lis  paranal_coords.lis
plots/data/cosmic_ray/: auger.txt  hires_i.txt  hires_ii.txt  (+4 more)
(+36 files in other folders)
