[tool.poetry]
name = "diss"
version = "1.0.1"
description = "My dissertation"
authors = ["y"]
license = "All right reserved"

[tool.poetry.dependencies]
python = "3.7.10"
matplotlib = "3.1.0"
gammapy = "v0.10"
naima = "0.8.3"
joblib = "v0.12.5"
tqdm = "^4.59.0"
pymc-spectrum = {git = "https://github.com/tudo-astroparticlephysics/ll_experiments.git", rev = "v1.0-dissertation-version"}
pydot = "v1.4.1"
numpy = "1.16.4"
pandas = "0.24.2"
scipy = "1.3.0"
seaborn = "0.9.0"
astropy = "3.2.1"
ctapipe-extra = {git = "https://github.com/cta-observatory/ctapipe-extra.git", rev = "v0.2.19"}
ctapipe = "v0.7.0"
Shapely = "^1.7.1"
aict-tools = "0.17.0"
cta-plots = {git = "https://github.com/kbruegge/cta_performance_plots.git", rev = "v0.0.6-dissertation-version"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
